ben er helemaal klaar mee met die *** zooi XD

--- a/test/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt.csproj
+++ b/test/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt.csproj
@@ -81,6 +81,8 @@
     <Content Include="GameThumbnail.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </Content>
+    <Content Include="story.txt" />
+    <Content Include="test_intro.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\intro_DuckFuntContent\intro_DuckFuntContent.contentproj">
