--- a/test/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt.csproj
+++ b/test/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt/intro_DuckFunt.csproj
@@ -83,6 +83,7 @@
     </Content>
     <Content Include="story.txt" />
     <Content Include="test_intro.png" />
+    <Content Include="tick_sound.wav" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\intro_DuckFuntContent\intro_DuckFuntContent.contentproj">
