--- a/solutions/MenuMaking_F_v3/MenuMaking/MenuMaking/MenuMaking.csproj
+++ b/solutions/MenuMaking_F_v3/MenuMaking/MenuMaking/MenuMaking.csproj
@@ -76,6 +76,7 @@
     <Compile Include="CursorUpdater.cs" />
     <Compile Include="DogAI.cs" />
     <Compile Include="Enemies.cs" />
+    <Compile Include="GameComponent1.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
