--- a/solutions/MenuMaking-WithScore_F_v1/MenuMaking/MenuMaking/MenuMaking.csproj
+++ b/solutions/MenuMaking-WithScore_F_v1/MenuMaking/MenuMaking/MenuMaking.csproj
@@ -64,6 +64,7 @@
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
+    <Reference Include="Microsoft.Xna.Framework.Storage, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=MSIL" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -77,6 +78,7 @@
     <Compile Include="CompanionCode.cs" />
     <Compile Include="Enemies.cs" />
     <Compile Include="GameComponent1.cs" />
+    <Compile Include="SaveData.cs" />
     <Compile Include="HighScores.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
