--- a/test/builds/SpaceHunt/SpaceHunt/SpaceHunt/SpaceHunt.csproj
+++ b/test/builds/SpaceHunt/SpaceHunt/SpaceHunt/SpaceHunt.csproj
@@ -72,7 +72,9 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonEnemy.cs" />
+    <Compile Include="Actor.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="EnemyArmed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
