--- a/test/builds/SpaceHunt/SpaceHunt/SpaceHunt/SpaceHunt.csproj
+++ b/test/builds/SpaceHunt/SpaceHunt/SpaceHunt/SpaceHunt.csproj
@@ -72,9 +72,15 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actor.cs" />
-    <Compile Include="Enemy.cs" />
-    <Compile Include="EnemyArmed.cs" />
+    <Compile Include="Classes\Actor.cs" />
+    <Compile Include="Classes\Enemy.cs" />
+    <Compile Include="Classes\EnemyArmed.cs" />
+    <Compile Include="Classes\InteractionEventArgs.cs" />
+    <Compile Include="Classes\Shape.cs" />
+    <Compile Include="Classes\ShapeAnimated.cs" />
+    <Compile Include="Classes\ShapeDraggable.cs" />
+    <Compile Include="Classes\ShapeInteractive.cs" />
+    <Compile Include="Classes\ShapeSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
