--- a/test/solutions/XNA_Learning/XNA_Learning/XNA_Learning/XNA_Learning.csproj
+++ b/test/solutions/XNA_Learning/XNA_Learning/XNA_Learning/XNA_Learning.csproj
@@ -70,8 +70,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
-    <Reference Include="WiimoteLib">
-      <HintPath>..\..\..\..\..\tools\WiimoteLib_1.8\WiimoteLib.dll</HintPath>
+    <Reference Include="WiimoteLib, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Desktop\WiimoteLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -79,7 +80,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Sprite.cs" />
-    <Compile Include="Ufo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
