--- a/solutions/XNA_Learning_WaveBar/XNA_Learning/XNA_Learning/XNA_Learning.csproj
+++ b/solutions/XNA_Learning_WaveBar/XNA_Learning/XNA_Learning/XNA_Learning.csproj
@@ -71,7 +71,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
     <Reference Include="WiimoteLib">
-      <HintPath>..\..\..\Nieuwe map (2)\WiimoteLib.dll</HintPath>
+      <HintPath>..\..\..\..\Dropbox\WIimote\WiimoteLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
