--- a/solutions/SpaceHunt/MenuMaking/MenuMaking/MenuMaking.csproj
+++ b/solutions/SpaceHunt/MenuMaking/MenuMaking/MenuMaking.csproj
@@ -74,7 +74,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
     <Reference Include="WiimoteLib">
-      <HintPath>..\..\..\..\..\tools\WiimoteLib_1.8\WiimoteLib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Desktop\Nieuwe map (2)\WiimoteLib_1.7\WiimoteLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
