--- a/solutions/SpaceHuntClassesv_7/SpaceHuntClasses/SpaceHuntClasses/SpaceHuntClasses.csproj
+++ b/solutions/SpaceHuntClassesv_7/SpaceHuntClasses/SpaceHuntClasses/SpaceHuntClasses.csproj
@@ -71,7 +71,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
     <Reference Include="WiimoteLib">
-      <HintPath>..\..\..\..\wii_ressources\WiimotLib_1.7\WiimotLib_1.7\WiimoteLib.dll</HintPath>
+      <HintPath>..\..\..\..\tools\WiimoteLib_1.8\WiimoteLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
